// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stylelint resolution should resolve Stylelint using "stylelint.stylelintPath" 1`] = `
Array [
  Object {
    "code": "fake",
    "message": "Fake result",
    "range": Object {
      "end": Object {
        "character": 1,
        "line": 0,
      },
      "start": Object {
        "character": 0,
        "line": 0,
      },
    },
    "severity": 1,
    "source": "Stylelint",
  },
]
`;

exports[`Stylelint resolution should resolve Stylelint using PnP 1`] = `
Array [
  Object {
    "code": "fake",
    "message": "Fake result from yarn-pnp",
    "range": Object {
      "end": Object {
        "character": 1,
        "line": 0,
      },
      "start": Object {
        "character": 0,
        "line": 0,
      },
    },
    "severity": 1,
    "source": "Stylelint",
  },
]
`;

exports[`Stylelint resolution should resolve Stylelint using Yarn 2.x PnP 1`] = `
Array [
  Object {
    "code": "fake",
    "message": "Fake result from yarn-2-pnp",
    "range": Object {
      "end": Object {
        "character": 1,
        "line": 0,
      },
      "start": Object {
        "character": 0,
        "line": 0,
      },
    },
    "severity": 1,
    "source": "Stylelint",
  },
]
`;

exports[`Stylelint resolution should resolve Stylelint using local node_modules 1`] = `
Array [
  Object {
    "code": "fake",
    "message": "Fake result from resolve-local",
    "range": Object {
      "end": Object {
        "character": 1,
        "line": 0,
      },
      "start": Object {
        "character": 0,
        "line": 0,
      },
    },
    "severity": 1,
    "source": "Stylelint",
  },
]
`;
